[package]
name = "festival_setlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
megalodon = { version = "0.11" }
serde_json = "1.0"
serde = "1.0.193"
reqwest = "0.11.22"
dotenv = "0.15.0"
chrono = "0.4.31"
colored = "2.1.0"
